# agent-shift-handoff

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_report.yml
.github/workflows/: ci.yml  mirror-to-personal.yml
agent_shift_handoff/: __init__.py  cli.py  compactor.py  generator.py  loader.py  models.py  schema.py  verifier.py
agent_shift_handoff/adapters/: __init__.py  generic_adapter.py  langgraph_adapter.py
agent_shift_handoff/report/: __init__.py  dashboard.py  store.py
agent_shift_handoff/state_store/: sqlite_store.py
config/: handoff_config.json
docs/: ARCHZOS_AGENT_ARCHITECTURE_CONTEXT.md  FAILURE_MODES.md  HANDOFF_SCHEMA_SPEC.md
examples/: coding_agent_session_1.py  coding_agent_session_2.py  verify_handoff.py
tests/: conftest.py  test_generator.py  test_loader.py  test_schema.py  test_state_store.py  test_verifier.py
